--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link nav-link_active">главная</a>
           </li>
-          <span class="nav-bullet">○</span>
+          <li class="nav-bullet">○</li>
           <li class="nav-item">
             <a href="#" class="nav-link">посмотреть лоты</a>
           </li>
-          <span class="nav-bullet">○</span>
+          <li class="nav-bullet">○</li>
           <li class="nav-item">
             <a href="#" class="nav-link">об аукционе</a>
           </li>
