--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <img src="./images/logo-black.svg" alt="Логотип компании" />
       </a>
       <address class="contact">
-        <p class="phone">+9 999 555 5555</p>
-        <p class="email">info@sobaka.ge</p>
+        <p class="phone" href="#">+9 999 555 5555</p>
+        <p class="email" href="#">info@sobaka.ge</p>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -73,7 +73,9 @@
               ФИЛЬМ РЕЖИССЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ
             </a>
             <p class="lots__item-description">
-              Не&nbsp;просто бросил, а&nbsp;ушёл с&nbsp;первой лекции. Какой была&nbsp;бы ваша ставка, если&nbsp;бы вы&nbsp;не&nbsp;знали, что режиссёр&nbsp;&mdash; Пол Томас Андерсон?
+              Не&nbsp;просто бросил, а&nbsp;ушёл с&nbsp;первой лекции. Какой
+              была&nbsp;бы ваша ставка, если&nbsp;бы вы&nbsp;не&nbsp;знали, что
+              режиссёр&nbsp;&mdash; Пол Томас Андерсон?
             </p>
           </div>
           <div class="lots__item overlay">
@@ -81,7 +83,13 @@
               КНИГА, ГДЕ ОПИСАН ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО АГЕНТА
             </a>
             <p class="lots__item-description">
-              Объёмом почти в&nbsp;тысячу страниц. Иногда без знаков препинания и&nbsp;с&nbsp;переходами на&nbsp;древнеанглийский. В&nbsp;ней одновременно рассказывается о&nbsp;16&nbsp;июня 1904 года и&nbsp;об&nbsp;истории литературы, начиная с&nbsp;античных времён. И&nbsp;это всё накладывается на&nbsp;эпическую поэму Гомера. Сколько&nbsp;бы вы&nbsp;поставили на&nbsp;&laquo;Улисса&raquo; Джеймса Джойса?
+              Объёмом почти в&nbsp;тысячу страниц. Иногда без знаков препинания
+              и&nbsp;с&nbsp;переходами на&nbsp;древнеанглийский. В&nbsp;ней
+              одновременно рассказывается о&nbsp;16&nbsp;июня 1904 года
+              и&nbsp;об&nbsp;истории литературы, начиная с&nbsp;античных времён.
+              И&nbsp;это всё накладывается на&nbsp;эпическую поэму Гомера.
+              Сколько&nbsp;бы вы&nbsp;поставили на&nbsp;&laquo;Улисса&raquo;
+              Джеймса Джойса?
             </p>
           </div>
           <div class="lots__item overlay">
@@ -89,7 +97,11 @@
               КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ ПОДРУГИ
             </a>
             <p class="lots__item-description">
-              Ну&nbsp;действительно, там линия, тут кружочек, а&nbsp;здесь и&nbsp;вовсе что-то похожее на&nbsp;инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько&nbsp;бы вы&nbsp;на&nbsp;такое поставили, если&nbsp;бы не&nbsp;знали, что это&nbsp;&mdash; одна из&nbsp;революционных работ Кандинского?
+              Ну&nbsp;действительно, там линия, тут кружочек, а&nbsp;здесь
+              и&nbsp;вовсе что-то похожее на&nbsp;инфузорию-туфельку. Никаких
+              полей, лесов, котиков... Сколько&nbsp;бы вы&nbsp;на&nbsp;такое
+              поставили, если&nbsp;бы не&nbsp;знали, что это&nbsp;&mdash; одна
+              из&nbsp;революционных работ Кандинского?
             </p>
           </div>
           <a href="#" class="lots__item-link">посмотреть больше</a>
@@ -104,10 +116,20 @@
         <div class="about__content-container">
           <h2 class="subtitle">ОБ АУКЦИОНЕ</h2>
           <p class="about__text">
-            Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание
+            невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны
+            были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен
+            дневник девочки-подростка или картина, которую может нарисовать даже
+            ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
           <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые и&nbsp;непонятые. Когда-то они казались просто неудачными. Но, несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в&nbsp;эти вещи не&nbsp;верил никто, продолжали верить их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые
+            и&nbsp;непонятые. Когда-то они казались просто неудачными. Но,
+            несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас
+            без этих лотов невозможно представить современную культуру. Когда
+            в&nbsp;эти вещи не&nbsp;верил никто, продолжали верить
+            их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
@@ -116,8 +138,8 @@
     <!-- Футер -->
     <footer class="footer">
       <address class="contact">
-        <p class="phone">+9 999 555 5555</p>
-        <p class="email">info@sobaka.ge</p>
+        <p class="phone" href="#">+9 999 555 5555</p>
+        <p class="email" href="#">info@sobaka.ge</p>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
