--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <img src="./images/logo-black.svg" alt="Логотип компании" />
       </a>
       <address class="contact">
-        <p class="phone" href="#">+9 999 555 5555</p>
-        <p class="email" href="#">info@sobaka.ge</p>
+        <a class="phone" href="#">+9 999 555 5555</a>
+        <a class="email" href="#">info@sobaka.ge</a>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -138,8 +138,8 @@
     <!-- Футер -->
     <footer class="footer">
       <address class="contact">
-        <p class="phone" href="#">+9 999 555 5555</p>
-        <p class="email" href="#">info@sobaka.ge</p>
+        <a class="phone" href="#">+9 999 555 5555</a>
+        <a class="email" href="#">info@sobaka.ge</a>
         <p class="address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
